Kek something sus i did

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block extrahead %}
+  {{ super() }}
+    <meta name="google-site-verification" content="MRrVZO1lbXN8Rx6_2vZRzLVLUjZf--qM2W0_CxEaSbQ" />
+{% endblock %}
+
 <!-- Announcement bar -->
 {% block announce %}
   <style>
