Basic is broken for a while now

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -31,7 +31,7 @@
   }
 </style>
 
-<strong>Deta Space is now in alpha</strong> 🚀
-Learn more and apply for access <a href="https://alpha.deta.space">here</a>.
+<strong>Deta Space is now in alpha.</strong> 🚀
+Learn more and get access <a href="https://alpha.deta.space">here</a>.
 There may be major changes to this site in the future.
 {% endblock %}
